Fix the overflow of content

--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,11 @@
     position: absolute;
     top: 0;
     left: 0;
-    width: 80%;
-    height: 50vh;
+    width: 90%;
+    height: 100vh;
     background-size: cover;
     animation: animateBg 50s linear infinite;
+    overflow: hidden;
 }
 
 @keyframes animateBg{
